[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/enemy/redcri.gd" type="Script" id=1]
[ext_resource path="res://Art/redcri.png" type="Texture" id=2]
[ext_resource path="res://Art/expld.png" type="Texture" id=3]

[sub_resource type="Gradient" id=5]

offsets = PoolRealArray( 0, 0.538012, 0.976608, 1 )
colors = PoolColorArray( 0.890137, 0.317627, 0, 1, 0.921387, 0.827148, 0.125488, 1, 0.921387, 0.827148, 0.125488, 0, 0.603516, 0.921387, 0, 0 )

[sub_resource type="GradientTexture" id=9]

gradient = SubResource( 5 )
width = 2048

[sub_resource type="ParticlesMaterial" id=11]

trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 2.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, -98, 0 )
initial_velocity = 10.0
initial_velocity_random = 1.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 45.0
angle_random = 0.0
scale = 5.0
scale_random = 1.0
color_ramp = SubResource( 9 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Angular Velocity", "Color", "Emission Shape", "Flags", "Gravity", "Initial Velocity", "Scale", "Spread", "Trail" ]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 5, 5 )

[sub_resource type="Animation" id=12]

resource_name = "bounce"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 0 ]
}

[sub_resource type="Animation" id=13]

resource_name = "damage"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:modulate")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "die"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("die_part:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "die_clear"
}, {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=14]

resource_name = "falling"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 9 ]
}

[sub_resource type="Animation" id=3]

length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=15]

resource_name = "jumping"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=4]

length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 4, 5, 6 ]
}

[sub_resource type="ParticlesMaterial" id=10]

trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 5.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
initial_velocity_random = 1.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 45.0
angle_random = 0.0
scale = 5.0
scale_random = 1.0
color_ramp = SubResource( 9 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Angular Velocity", "Color", "Emission Shape", "Flags", "Gravity", "Initial Velocity", "Scale", "Spread", "Trail" ]

[sub_resource type="Animation" id=8]

resource_name = "poof"
length = 0.3
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("poof:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("poof:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "set_fixed_process"
} ]
}

[sub_resource type="RectangleShape2D" id=16]

custom_solver_bias = 0.0
extents = Vector2( 7, 5 )

[node name="redcri" type="KinematicBody2D" groups=[
"emeny",
]]

input_pickable = false
collision_layer = 8
collision_mask = 1030
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "collision" ]

[node name="check_floor_r" type="RayCast2D" parent="."]

visible = false
position = Vector2( 8, 0 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 128 )
collision_layer = 1032
type_mask = 15

[node name="check_floor_l" type="RayCast2D" parent="."]

visible = false
position = Vector2( -8, 0 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 128 )
collision_layer = 1032
type_mask = 15

[node name="check_wall_l" type="RayCast2D" parent="."]

visible = false
position = Vector2( -5, 1 )
enabled = true
exclude_parent = true
cast_to = Vector2( -4, 0 )
collision_layer = 1032
type_mask = 1

[node name="check_wall_r" type="RayCast2D" parent="."]

visible = false
position = Vector2( 5, 1 )
enabled = true
exclude_parent = true
cast_to = Vector2( 4, 0 )
collision_layer = 1032
type_mask = 1

[node name="check_jump_l" type="RayCast2D" parent="."]

visible = false
position = Vector2( -4, -26 )
enabled = true
exclude_parent = true
cast_to = Vector2( -6, 0 )
collision_layer = 1032
type_mask = 1

[node name="check_jump_r" type="RayCast2D" parent="."]

visible = false
position = Vector2( 4, -26 )
enabled = true
exclude_parent = true
cast_to = Vector2( 6, 0 )
collision_layer = 1032
type_mask = 1

[node name="part" type="Particles2D" parent="."]

position = Vector2( 0, 2 )
emitting = true
amount = 8
lifetime = 0.5
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 11 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time" ]

[node name="body" type="Sprite" parent="."]

texture = ExtResource( 2 )
vframes = 4
hframes = 4
frame = 1
_sections_unfolded = [ "Animation", "Region", "Visibility" ]

[node name="col" type="CollisionShape2D" parent="."]

position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="anim" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/bounce = SubResource( 12 )
anims/damage = SubResource( 13 )
anims/die = SubResource( 2 )
anims/falling = SubResource( 14 )
anims/idle = SubResource( 3 )
anims/jumping = SubResource( 15 )
anims/run = SubResource( 4 )
next/bounce = "idle"
next/damage = "idle"
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "idle"

[node name="update_target_dir" type="Timer" parent="."]

process_mode = 1
wait_time = 0.3
one_shot = false
autostart = true

[node name="die_part" type="Particles2D" parent="."]

position = Vector2( 0, 2 )
emitting = true
amount = 16
lifetime = 0.5
one_shot = true
preprocess = 0.0
speed_scale = 4.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 10 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Time" ]

[node name="visib" type="VisibilityNotifier2D" parent="."]

scale = Vector2( 0.1, 0.1 )
rect = Rect2( -10, -10, 20, 20 )

[node name="poof" type="Sprite" parent="."]

visible = false
texture = ExtResource( 3 )
vframes = 2
hframes = 4
frame = 5
_sections_unfolded = [ "Animation", "Material", "Visibility" ]

[node name="effects" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/poof = SubResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="shower" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="kill_zone" type="Area2D" parent="."]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="col" type="CollisionShape2D" parent="kill_zone"]

position = Vector2( 0, 4 )
shape = SubResource( 16 )

[connection signal="timeout" from="update_target_dir" to="." method="_update_dir"]

[connection signal="screen_entered" from="visib" to="." method="_on_visib_screen_entered"]

[connection signal="screen_exited" from="visib" to="." method="_on_visib_screen_exited"]

[connection signal="timeout" from="shower" to="." method="_on_shower_timeout"]

[connection signal="body_entered" from="kill_zone" to="." method="_on_kill_zone_body_entered"]


